ref(swagger): Fixed Swagger Docs
